@startuml

title __DIALOGS's Class Diagram__\n

  namespace com.example.fitnesstracker {
    namespace Dialogs {
      class com.example.fitnesstracker.Dialogs.ExerciseAddDialog {
          - btnadd : Button
          - exerciseDesc : EditText
          - exerciseKg : EditText
          - exerciseName : EditText
          - exerciseReps : EditText
          - exerciseURL : EditText
          + onAttach()
          + onCreateDialog()
          - validateDesc()
          - validateKg()
          - validateName()
          - validateReps()
          - validateURL()
      }
    }
  }
  

  namespace com.example.fitnesstracker {
    namespace Dialogs {
      interface com.example.fitnesstracker.Dialogs.ExerciseAddDialog.ExerciseAddDialogListener {
          {abstract} + applyText()
      }
    }
  }
  

  namespace com.example.fitnesstracker {
    namespace Dialogs {
      class com.example.fitnesstracker.Dialogs.ExerciseEditDialog {
          - btnadd : Button
          - exerciseDesc : EditText
          - exerciseKg : EditText
          - exerciseName : EditText
          - exerciseReps : EditText
          - exerciseURL : EditText
          - exerciseid : int
          + ExerciseEditDialog()
          + onAttach()
          + onCreateDialog()
          - validateDesc()
          - validateKg()
          - validateName()
          - validateReps()
          - validateURL()
      }
    }
  }
  

  namespace com.example.fitnesstracker {
    namespace Dialogs {
      interface com.example.fitnesstracker.Dialogs.ExerciseEditDialog.ExerciseEditDialogListener {
          {abstract} + ediText()
      }
    }
  }
  

  namespace com.example.fitnesstracker {
    namespace Dialogs {
      class com.example.fitnesstracker.Dialogs.WorkoutAddDialog {
          - workoutName : EditText
          + onAttach()
          + onCreateDialog()
      }
    }
  }
  

  namespace com.example.fitnesstracker {
    namespace Dialogs {
      interface com.example.fitnesstracker.Dialogs.WorkoutAddDialog.WorkoutAddDialogListener {
          {abstract} + applyText()
      }
    }
  }
  

  com.example.fitnesstracker.Dialogs.ExerciseAddDialog -up-|> androidx.appcompat.app.AppCompatDialogFragment
  com.example.fitnesstracker.Dialogs.ExerciseAddDialog o-- com.example.fitnesstracker.Dialogs.ExerciseAddDialog.ExerciseAddDialogListener : listener
  com.example.fitnesstracker.Dialogs.ExerciseAddDialog +-down- com.example.fitnesstracker.Dialogs.ExerciseAddDialog.ExerciseAddDialogListener
  com.example.fitnesstracker.Dialogs.ExerciseEditDialog -up-|> androidx.appcompat.app.AppCompatDialogFragment
  com.example.fitnesstracker.Dialogs.ExerciseEditDialog o-- com.example.fitnesstracker.Database.DatabaseHelper : db
  com.example.fitnesstracker.Dialogs.ExerciseEditDialog o-- com.example.fitnesstracker.Dialogs.ExerciseEditDialog.ExerciseEditDialogListener : listener
  com.example.fitnesstracker.Dialogs.ExerciseEditDialog +-down- com.example.fitnesstracker.Dialogs.ExerciseEditDialog.ExerciseEditDialogListener
  com.example.fitnesstracker.Dialogs.WorkoutAddDialog -up-|> androidx.appcompat.app.AppCompatDialogFragment
  com.example.fitnesstracker.Dialogs.WorkoutAddDialog o-- com.example.fitnesstracker.Dialogs.WorkoutAddDialog.WorkoutAddDialogListener : listener
  com.example.fitnesstracker.Dialogs.WorkoutAddDialog +-down- com.example.fitnesstracker.Dialogs.WorkoutAddDialog.WorkoutAddDialogListener


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
